// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizardContext should apply a hook for retrieving data from a selector: dispatch confirmations on hide wizard 1`] = `
Array [
  Array [
    Object {
      "alertType": "danger",
      "header": "t(toast-notifications.title_add-source_hidden, {\\"context\\":\\"error\\"})",
      "message": "t(toast-notifications.description_add-source_hidden, {\\"context\\":\\"error\\"})",
      "type": "TOAST_ADD",
    },
  ],
  Array [
    Object {
      "alertType": "success",
      "header": "t(toast-notifications.title_add-source_hidden, {\\"context\\":\\"\\"})",
      "message": "t(toast-notifications.description_add-source_hidden, {\\"context\\":\\"\\",\\"name\\":\\"lorem ipsum\\"})",
      "type": "TOAST_ADD",
    },
  ],
]
`;

exports[`AddSourceWizardContext should apply a hook for retrieving data from a selector: error response 1`] = `
Object {
  "data": Object {
    "messages": Object {},
  },
  "error": true,
  "show": false,
}
`;

exports[`AddSourceWizardContext should apply a hook for retrieving data from a selector: error show response 1`] = `
Object {
  "data": Object {
    "messages": Object {},
  },
  "error": true,
}
`;

exports[`AddSourceWizardContext should apply a hook for retrieving data from a selector: success response 1`] = `
Object {
  "fulfilled": true,
}
`;

exports[`AddSourceWizardContext should apply a hook for retrieving data from a selector: success show response 1`] = `
Object {
  "fulfilled": true,
  "show": false,
  "source": Object {
    "name": "lorem ipsum",
  },
}
`;

exports[`AddSourceWizardContext should handle an onShowAddSourceWizard event: onColumnSort event, dispatch 1`] = `
Array [
  Array [
    Object {
      "type": "CREATE_SOURCE_SHOW",
    },
  ],
]
`;

exports[`AddSourceWizardContext should return specific properties: specific properties 1`] = `
Object {
  "useGetAddSource": [Function],
  "useOnShowAddSourceWizard": [Function],
}
`;
